@@ -10,10 +10,10 @@
     <description>
         PMD is a source code analyzer. It finds common programming flaws like unused variables, empty catch blocks,
         unnecessary object creation, and so forth. It supports Java, JavaScript, Salesforce.com Apex and Visualforce,
-        Modelica, PLSQL, Apache Velocity, XML, XSL, Scala.
+        Modelica, PLSQL, Apache Velocity, HTML, XML, XSL, Scala.
 
         Additionally it includes CPD, the copy-paste-detector. CPD finds duplicated code in
-        C/C++, C#, Dart, Fortran, Go, Groovy, Java, JavaScript, JSP, Kotlin, Lua, Matlab, Modelica,
+        C/C++, C#, Dart, Fortran, Gherkin, Go, Groovy, HTML, Java, JavaScript, JSP, Kotlin, Lua, Matlab, Modelica,
         Objective-C, Perl, PHP, PLSQL, Python, Ruby, Salesforce.com Apex, Scala, Swift and Visualforce.
     </description>
 
@@ -76,7 +76,7 @@
     </issueManagement>
 
     <properties>
-        <project.build.outputTimestamp>2022-06-25T07:30:42Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-10-29T07:34:24Z</project.build.outputTimestamp>
 
         <java.version>8</java.version>
 
@@ -85,17 +85,16 @@
 
 
         <kotlin.compiler.jvmTarget>${maven.compiler.test.target}</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.7.0</kotlin.version>
-        <kotest.version>4.4.3</kotest.version>
-        <dokka.version>1.6.21</dokka.version>
+        <kotlin.version>1.7.20</kotlin.version>
+        <kotest.version>5.5.4</kotest.version>
+        <junit5.version>5.8.2</junit5.version> <!-- needed by kotest -->
+        <dokka.version>1.7.20</dokka.version>
 
-
-        <junit.version>5.8.2</junit.version>
         <javacc.version>5.0</javacc.version>
-        <surefire.version>3.0.0-M5</surefire.version>
-        <checkstyle.version>9.3</checkstyle.version>
-        <checkstyle.plugin.version>3.1.2</checkstyle.plugin.version>
-        <pmd.plugin.version>3.17.0</pmd.plugin.version>
+        <surefire.version>3.0.0-M7</surefire.version>
+        <checkstyle.version>10.3.3</checkstyle.version>
+        <checkstyle.plugin.version>3.2.0</checkstyle.plugin.version>
+        <pmd.plugin.version>3.19.0</pmd.plugin.version>
         <ant.version>1.10.12</ant.version>
         <javadoc.plugin.version>3.2.0</javadoc.plugin.version>
         <antlr.version>4.9.1</antlr.version>
@@ -106,7 +105,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <pmd.website.baseurl>https://pmd.github.io/pmd</pmd.website.baseurl>
 
-        <argLine>-Xmx512m -Dfile.encoding=${project.build.sourceEncoding}</argLine>
+        <argLine>-Xmx512m -Dfile.encoding=${project.build.sourceEncoding} ${extraArgLine}</argLine>
+        <extraArgLine /> <!-- empty by default, profiles set it as needed -->
 
         <pmd.build-tools.version>18</pmd.build-tools.version>
 
@@ -287,13 +287,13 @@
                         <dependency>
                             <groupId>org.junit.vintage</groupId>
                             <artifactId>junit-vintage-engine</artifactId>
-                            <version>${junit.version}</version>
+                            <version>${junit5.version}</version>
                         </dependency>
                         <!-- JUnit5 Platform Engine for Junit 5 -->
                         <dependency>
                             <groupId>org.junit.jupiter</groupId>
                             <artifactId>junit-jupiter-engine</artifactId>
-                            <version>${junit.version}</version>
+                            <version>${junit5.version}</version>
                         </dependency>
                         <!-- Junit5 Platform Engine for Kotlin Tests -->
                         <dependency>
@@ -426,22 +426,22 @@
                         <dependency>
                             <groupId>net.sourceforge.pmd</groupId>
                             <artifactId>pmd-core</artifactId>
-                            <version>6.47.0</version> <!-- pmd.dogfood.version -->
+                            <version>6.51.0</version> <!-- pmd.dogfood.version -->
                         </dependency>
                         <dependency>
                             <groupId>net.sourceforge.pmd</groupId>
                             <artifactId>pmd-java</artifactId>
-                            <version>6.47.0</version> <!-- pmd.dogfood.version -->
+                            <version>6.51.0</version> <!-- pmd.dogfood.version -->
                         </dependency>
                         <dependency>
                             <groupId>net.sourceforge.pmd</groupId>
                             <artifactId>pmd-jsp</artifactId>
-                            <version>6.47.0</version> <!-- pmd.dogfood.version -->
+                            <version>6.51.0</version> <!-- pmd.dogfood.version -->
                         </dependency>
                         <dependency>
                             <groupId>net.sourceforge.pmd</groupId>
                             <artifactId>pmd-javascript</artifactId>
-                            <version>6.47.0</version> <!-- pmd.dogfood.version -->
+                            <version>6.51.0</version> <!-- pmd.dogfood.version -->
                         </dependency>
                         <!-- This contains the dogfood ruleset -->
                         <dependency>
@@ -711,6 +711,11 @@
                 <version>1.48</version> <!-- 1.48 is the latest version compatible with java7 -->
             </dependency>
             <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>4.7.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
                 <version>9.3</version>
@@ -726,9 +731,24 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>net.sourceforge.pmd</groupId>
+                <artifactId>pmd-ant</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.pmd</groupId>
+                <artifactId>pmd-test-schema</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.checkerframework</groupId>
                 <artifactId>checker-qual</artifactId>
                 <version>2.5.2</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.saxon</groupId>
+                <artifactId>saxon</artifactId>
+                <version>9.1.0.8</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.saxon</groupId>
@@ -779,7 +799,7 @@
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
-                <version>1.30</version>
+                <version>1.33</version>
             </dependency>
 
 
@@ -924,15 +944,6 @@
                 <artifactId>kotest-runner-junit5-jvm</artifactId>
                 <version>${kotest.version}</version>
                 <scope>test</scope>
-                <exclusions>
-                    <!-- exclude transitive dependency to fix CVE-2021-29425
-                         kotest 4.4.3 depends on commons-io 2.6
-                      -->
-                    <exclusion>
-                        <groupId>commons-io</groupId>
-                        <artifactId>commons-io</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>io.kotest</groupId>
@@ -960,24 +971,16 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- transitive dependency through io.kotest/kotest-runner-junit5-jvm@4.4.3
-                 upgrade to 4.8.112 to fix [sonatype-2021-1074] CWE-611: Improper Restriction of XML External Entity Reference ('XXE')
-                 https://github.com/classgraph/classgraph/releases/tag/classgraph-4.8.112
-              -->
-            <dependency>
-                <groupId>io.github.classgraph</groupId>
-                <artifactId>classgraph</artifactId>
-                <version>4.8.112</version>
-            </dependency>
-
             <!-- transitive dependency through org.scalameta:trees_2.13
                  upgrade to 3.16.1 to fix CVE-2021-22569 A potential Denial of Service issue in protobuf-java
                  https://github.com/protocolbuffers/protobuf/security/advisories/GHSA-wrvw-hg22-4m67
+                 upgrade to 3.16.3 to fix CVE-2022-3171 protobuf-java has a potential Denial of Service issue
+                 https://github.com/advisories/GHSA-h4h5-3hr4-j3g2
             -->
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
-                <version>3.16.1</version>
+                <version>3.16.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -1058,6 +1061,18 @@
                 </dependency>
             </dependencies>
         </profile>
+
+        <profile>
+            <id>Java 18+</id>
+            <activation>
+                <jdk>[18,)</jdk>
+            </activation>
+            <properties>
+                <!-- java.security.manager=allow is needed under Java 18+ for usages of com.github.stefanbirkner.systemlambda.SystemLambda.catchSystemExit -->
+                <extraArgLine>-Djava.security.manager=allow</extraArgLine>
+            </properties>
+        </profile>
+
         <profile>
             <id>pmd-release</id>
             <properties>
@@ -1185,6 +1200,7 @@
     <modules>
         <module>pmd-apex-jorje</module>
         <module>pmd-apex</module>
+        <module>pmd-cli</module>
         <module>pmd-core</module>
         <module>pmd-cpp</module>
         <module>pmd-cs</module>
@@ -1216,8 +1232,10 @@
         <module>pmd-scala-modules/pmd-scala_2.12</module>
         <module>pmd-swift</module>
         <module>pmd-test</module>
+        <module>pmd-test-schema</module>
         <module>pmd-visualforce</module>
         <module>pmd-vm</module>
         <module>pmd-xml</module>
+        <module>pmd-ant</module>
     </modules>
 </project>
